fixing vertical scroll issue on mobiles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,7 @@ body {
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
+  overflow-y: hidden;
   align-items: center;
   justify-content: center;
   height: 100vh;
